test(stitch): lock major Stitch operational domains before implementation